Modification in HTML

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="home" id="home">
         <div class="hero-info">
             <h3>Welcome To my World</h3>
-            <h1>Hi I'm Richard</h1>
+            <h1>Hi I'm Arif Mahmud</h1>
 
             <div class="text-animate">
                 <h2>Frontend Developer</h2>
@@ -530,7 +530,7 @@
     </section>
 
     <footer>
-        <p>Copyright © 2023 by <span>Pars Coder</span> || All Right Reservd.</p>
+        <p>Copyright © 2023 by <span>Arif Mahmud</span> || All Right Reservd.</p>
     </footer>
 
     <div id="progress">
